<resources>
    <string name="app_name">ChargeControl</string>
    <string name="main_fragment">Charge Control</string>
    <string name="apply">Apply Settings</string>
    <string name="reset">Reset</string>
    <string name="detail">Battery Details</string>
    <string name="stop_level">Stop Charging Level</string>
    <string name="start_level">Start Charging Level</string>
    <string name="unlimit_min">Un-limit charge time per %</string>
    <string name="battery_capacity">Capacity</string>
    <string name="battery_cycle_count">Cycle Count</string>
    <string name="battery_temp">Temperature</string>
    <string name="battery_status">Status</string>
    <string name="battery_current">Current</string>
    <string name="battery_voltage">Voltage</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="auto_refresh_off">Auto refresh off</string>
    <string name="no_root">Root access isn\'t granted! This app won\'t work without root!</string>
    <string name="charging">Charging</string>
    <string name="charge_blocked">Blocked</string>
    <string name="charge_idle">Idle</string>
    <string name="charge_na">N/A</string>
    <string name="battery_status_title">Battery Status</string>
    <string name="charge_control_title">Charge Control</string>
    <string name="battery_details_title">Battery Details</string>
    <string name="settings_applied">Settings applied successfully</string>
    <string name="settings_reset">Settings reset to default</string>
    <string name="battery_healthy">Healthy</string>
    <string name="battery_warning">Warning</string>
    <string name="battery_critical">Critical</string>
</resources>
